--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@types/three": "^0.140.0",
     "register-service-worker": "^1.7.2",
+    "three": "^0.140.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
