--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "@types/three": "^0.140.0",
-    "register-service-worker": "^1.7.2",
-    "three": "^0.140.2",
-    "vue": "^3.2.13"
+    "build": "vue-cli-service build",
+    "lint": "eslint './**/*.{ts,vue}'"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "eslint": "^8.18.0",
+    "eslint-plugin-vue": "^9.1.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5"
@@ -25,5 +25,11 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "dependencies": {
+    "@types/three": "^0.141.0",
+    "register-service-worker": "^1.7.2",
+    "three": "^0.141.0",
+    "vue": "^3.2.37"
+  }
 }
